5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_2425.log
== TEST (2019-03-28 13:17:46) 
-- CODE:
km = float(input())
l = float(input())
print(round(km/l"km/l", 3))
-- ERROR:
File "XXXX", line 3
    print(round(km/l"km/l", 3))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:20:21) 
-- CODE:
km = float(input())
l = float(input())
m = float(km/l)
t =("km/l")
print(round(m+t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(m+t, 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:21:20) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(round(m+t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(m+t, 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:21:59) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m+t, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(m+t, 3)))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:22:29) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(t, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(t, 3)))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:23:02) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m, 3)))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:23:54) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print((float(round(m, 3)))t)
-- ERROR:
File "XXXX", line 5
    print((float(round(m, 3)))t)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:24:09) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print((float(round(m, 3)))km/l)
-- ERROR:
File "XXXX", line 5
    print((float(round(m, 3)))km/l)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:25:07) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m, 3)km/))
-- ERROR:
File "XXXX", line 5
    print(float(round(m, 3)km/))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:25:26) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m, 3)km/))
-- ERROR:
File "XXXX", line 5
    print(float(round(m, 3)km/))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:25:27) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m, 3)km/))
-- ERROR:
File "XXXX", line 5
    print(float(round(m, 3)km/))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:26:22) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m, 3)))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:26:29) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t =("km/l")
print(float(round(m, 3)t))
-- ERROR:
File "XXXX", line 5
    print(float(round(m, 3)t))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:27:09) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print(float(round(m, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:27:19) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print(float(round(m, 3))t)
-- ERROR:
File "XXXX", line 5
    print(float(round(m, 3))t)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:27:29) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print(float(round(m, 3)t))
-- ERROR:
File "XXXX", line 5
    print(float(round(m, 3)t))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:28:36) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print((round(m, 3)t)
-- ERROR:
File "XXXX", line 5
    print((round(m, 3)t)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:28:45) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print((round(m, 3))
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:28:56) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print((round(m, 3))
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:29:40) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print(round(m, 3)t)
-- ERROR:
File "XXXX", line 5
    print(round(m, 3)t)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:29:48) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print(round(m, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:30:42) 
-- CODE:
km = float(input())
l = float(input())
m = (km/l)
t = input("km/l")
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:32:38) 
-- CODE:
km = float(input())
l = float(input())
t = input("km/l")
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:33:35) 
-- CODE:
km = float(input())
l = float(input())
t = input("km/l")
m = float(km/l)
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:34:48) 
-- CODE:
km = float(input())
l = float(input())
t = input("km/l")
m = float(km/l)
print(float(round(m, 3)+t))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:35:48) 
-- CODE:
km = (input())
l = (input())
t = input("km/l")
m = float(km/l)
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:36:44) 
-- CODE:
km = input()
l = input()
t = input("km/l")
m = (km/l)
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:37:24) 
-- CODE:
km = input()
l = input()
t = input("km/l")
m = km/l
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:37:59) 
-- CODE:
km = input()
l = input()
t = input("km/l")
m = str(km/l)
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:38:58) 
-- CODE:
km = input()
l = input()
t = input("km/l")
m = km/l
print(round(m, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:39:47) 
-- CODE:
km = input()
l = input()
t = input("km/l")
m = float(km/l)
print(round(m, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:40:27) 
-- CODE:
km = input()
l = input()
t = input(" o")
m = float(km/l)
print(round(m, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:40:38) 
-- CODE:
km = input()
l = input()
t = input(" o")
m = float(km/l)
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:41:41) 
-- CODE:
km = input()
l = input()
t = input(" o")
m = km/l
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:42:10) 
-- CODE:
km = input()
l = input()
t = input(" o")
m = km / l
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:43:20) 
-- CODE:
km = input()
l = input()
t = input(" o")
m = km / l
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:43:57) 
-- CODE:
km = input()
l = input()
t = input(" o")
m = (km / l)
print(round(m, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:44:41) 
-- CODE:
km = input()
l = input()
t = input(" o")
x = (km / l)
print(round(x, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:11:52) 
-- CODE:
y = input()
l = input()
t = input(" o")
x = y / l
print(round(x, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:15:21) 
-- CODE:
y = input()
l = input()
t = input(" o")
x = float(y/l)
print(round(x, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:48:16) 
-- CODE:
y = input()
l = input()
t = input(" o")
x = float(y/l)
print(round(x, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:49:31) 
-- CODE:
y = input()
l = input()
t = input(" o")
x = str(y/l)
print(round(x, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:50:11) 
-- CODE:
y=input()
l=input()
t=input(" o")
x =str(y/l)
print(round(x, 3)+t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:50:44) 
-- CODE:
y1=input()
l1=input()
t1=input(" o")
x1=str(y/l)
print(round(x1, 3)+t1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:52:20) 
-- CODE:
y1=input()
l1=input()
t1=input(" o")
x1=str(y1/l1)
print(round(x1, 3)+t1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:53:01) 
-- CODE:
y1=input()
l1=input()
t1=input(" o")
x1=(y1/l1)
print(round(x1, 3)+t1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:54:08) 
-- CODE:
y1=input()
l1=input()
t1=input(" o")
x1=(y1//l1)
print(round(x1, 3)+t1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:54:53) 
-- CODE:
y1=input()
l1=input()
t1=input(" o")
x1=(y1//l1)
print(round(x1, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:56:51) 
-- CODE:
a=input()
b=input()
c=input(" o")
d= a / b 
print(round(x1, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:58:50) 
-- CODE:
a=input("distancia")
b=input("km")
c=input(" digite")
d= a/b 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:59:39) 
-- CODE:
a=input("distancia")
b=input("km")
c=input(" digite")
d= a/b 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:00:48) 
-- CODE:
a=input("distancia")
b=input("km")
c=input(" digite")
total= a/b 
print(round(total, 3)+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:11:46) 
-- CODE:
#a=input("distancia")
#b=input("km")
#c=input(" digite")
total= 500/34 
#print(round(total,3)+c)
print(round(total,3))
-- OUTPUT:
14.706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:12:04) 
-- CODE:
#a=input("distancia")
#b=input("km")
#c=input(" digite")
total= 500/35
#print(round(total,3)+c)
print(round(total,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:12:46) 
-- CODE:
#a=input("distancia")
#b=input("km")
#c=input(" digite")
total= 500/35
#print(round(total,3)+c)
print(round(total,3)+"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:13:43) 
-- CODE:
#a=input("distancia")
#b=input("km")
#c=input(" digite")
total= 500/35
#print(round(total,3)+c)
print(round(total,3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(total,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:14:34) 
-- CODE:
#a=input("distancia")
#b=input("km")
#c=input(" digite")
total= 500/35
#print(round(total,3)+c)
print((round(total,3))"km/l")
-- ERROR:
File "XXXX", line 6
    print((round(total,3))"km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:17:08) 
-- CODE:
a=input("distancia")
b=input("km")
c=("kl/l")
total= 500/35
print(round(total,3)(+c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,3)(+c))
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:18:10) 
-- CODE:
a=input("distancia")
b=input("km")
c=("kl/l")
total= a/b
print(round(total, 3)str(+c))

-- ERROR:
File "XXXX", line 5
    print(round(total, 3)str(+c))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:18:32) 
-- CODE:
a=input("distancia")
b=input("km")
c=("kl/l")
total= a/b
print(round(total, 3)+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= a/b
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:20:09) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total=float(a/b)
print(round(total, 3)+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total, 3)+c)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:21:03) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total=float(a/b)
print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:22:36) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total=float(a/b)
final=total+"km/l"
print(round(total, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    final=total+"km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:25) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total=float(a/b)
final=float(total)+"km/l"
print(round(total, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    final=float(total)+"km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:50) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total=float(a/b)
final=float(total)+str("km/l")
print(round(total, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    final=float(total)+str("km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:45:26) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:45:56) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3)"km/l:")

-- ERROR:
File "XXXX", line 5
    print(round(total, 3)"km/l:")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:46:25) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3)+"km/l: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total, 3)+"km/l: ")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:46:54) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3)+"c")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total, 3)+"c")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 07:58:24) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3)c)

-- ERROR:
File "XXXX", line 5
    print(round(total, 3)c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 07:58:40) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 07:58:41) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3))

-- EXECUTION TIME:
0.11656
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:30:43) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:30:54) 
-- CODE:
a=float(input("distancia"))
b=float(input("km"))
c=("km/l")
total= a/b
print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:31:55) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
print(round(total, 3)c)

-- ERROR:
File "XXXX", line 5
    print(round(total, 3)c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:32:09) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
print(round(total, 3)+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total, 3)+c)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:34:03) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:34:35) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:35:22) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(m,c)

-- OUTPUT:
14.286
None km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:36:00) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(m+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(m+c)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:36:33) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(m c)

-- ERROR:
File "XXXX", line 6
    print(m c)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:46:53) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(m+"km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(m+"km/l")
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:48:32) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(for(m+c)

-- ERROR:
File "XXXX", line 6
    print(for(m+c)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:48:40) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(for(m+c))

-- ERROR:
File "XXXX", line 6
    print(for(m+c))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:49:07) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(for(m+'c'))

-- ERROR:
File "XXXX", line 6
    print(for(m+'c'))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:49:26) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(for(m+km/l))

-- ERROR:
File "XXXX", line 6
    print(for(m+km/l))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:49:53) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3))
print(for(m+"km/l"))

-- ERROR:
File "XXXX", line 6
    print(for(m+"km/l"))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:52:47) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3)),"km/l"

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:53:22) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:53:48) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3),"km/l")

-- EXECUTION TIME:
0.144474
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:04:13) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:04:32) 
-- CODE:
a=float(input("distancia"))
b=float(input("l"))
c="km/l"
total= a/b
m=print(round(total, 3),"km/l")

-- EXECUTION TIME:
0.292296
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
